# shift_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
app/: config.py  database.db  database.py  main.py  models.py  schemas.py  security.py
app/alembic/: env.py
app/alembic/versions/: 2025_07_01_1247-172940d9d3da_create_user_table.py  2025_07_01_1249-9528bc2fd440_create_salary_table.py  2025_07_01_1417-a763f59bfeef_fix_creatad_at_colomn_in_tables.py  2025_07_01_1427-5f7384ff1af2_fix_salsries_colomn_in_user_tables.py  2025_07_01_1626-9f76cf87273f_fix_next_raise_datesalary_colomn_in_.py  2025_07_01_1647-a16270587733_create_user_table.py  2025_07_01_1648-d5d05a10dfca_create_salary_table.py
app/api/: auth.py  ayth.py  salary.py
app/models/: __init__.py  base.py  db.py  salary.py  user.py
